[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/Enemy1_sheet.png" type="Texture" id=2]
[ext_resource path="res://src/Actors/Light.tres" type="OccluderPolygon2D" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.25, 20.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.5, 9.75 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 2 )
vframes = 3
hframes = 5

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
visible = false
occluder = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="StompArea2D" type="Area2D" parent="."]
position = Vector2( 0, -50 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea2D"]
shape = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -33 )
rect = Rect2( -50, -33, 100, 66 )
process_parent = true
physics_process_parent = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
[connection signal="area_entered" from="StompArea2D" to="." method="_on_StompArea2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
